Fix transform alignment styles

--- a/composer/modules/web/src/plugins/ballerina/diagram/views/default/components/transformer/function.css
+++ b/composer/modules/web/src/plugins/ballerina/diagram/views/default/components/transformer/function.css
@@ -47,10 +47,11 @@
 .transform-expanded-func .btn-remove-func {
     float: right;
     height: 30px;
-    width: 30px;
+    width: 25px;
     line-height: 30px;
     padding: 0;
     color: #bababb;
     background: #666769;
     z-index: 0 !important;
+    font-size: 12px;
 }
